# XuYa-Terminal

./: .gitignore  .size-limit.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  biome.json  components.json  index.html  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  settings.html  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  signpath-test.yml
assets/logo-exports/: xuya-terminal-logo.icns
crates/xuya-core/: Cargo.toml
crates/xuya-core/src/: lib.rs
crates/xuya-pty/: Cargo.toml
crates/xuya-pty/src/: lib.rs  session.rs  shell.rs
crates/xuya-pty/tests/: pty_integration.rs
docs/: auto-update.md
scripts/: eager-graph.d.mts  eager-graph.mjs  set-version.mjs
src/: App.tsx  index.css  main.tsx  themes.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  installer-hooks.nsh  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/modules/: agent.rs  agent_config.rs  agent_session.rs  mod.rs  net.rs  proc.rs  secrets.rs  workspace.rs
src-tauri/src/modules/fs/: file.rs  grep.rs  mod.rs  mutate.rs  search.rs  tree.rs  watch.rs
src-tauri/src/modules/git/: commands.rs  errors.rs  mod.rs  operations.rs  parser.rs  process.rs  types.rs  utils.rs
src-tauri/src/modules/history/: mod.rs  parse.rs
src-tauri/src/modules/pty/: agent_detect.rs  da_filter.rs  job.rs  mod.rs  session.rs  shell_init.rs
src-tauri/src/modules/pty/scripts/: bashrc.bash  init.fish  profile.ps1  zlogin.zsh  zprofile.zsh  zshenv.zsh  zshrc.zsh
src-tauri/src/modules/shell/: background.rs  mod.rs  ringbuffer.rs  session.rs
src-tauri/tests/: fs_search.rs  git_operations.rs  shell_background.rs
src-tauri/tests/common/: mod.rs
src/app/: App.tsx  eager-budget.test.ts
src/app/components/: CloseDialogs.tsx  OsIcon.tsx  WorkspaceInputBar.tsx  WorkspaceSurface.tsx  useGitBranch.ts  useSystemInfo.ts
src/app/hooks/: useTabCloseGuards.ts  useWorkspaceSwitcher.ts
src/assets/fonts/: fonts.css
src/components/: CommandPalette.tsx  ContextMenu.tsx  DockviewLayout.tsx  HeaderActions.tsx  Modals.tsx  PanelTab.tsx  Sidebar.tsx  StatusBar.tsx  TerminalView.tsx  TopBar.tsx  Watermark.tsx  WindowControls.tsx  newSessionMenu.tsx
src/components/ai-elements/: chat-code-lezer.ts  chat-code.tsx  context.tsx  conversation.tsx  markdown-code.tsx  message.tsx  reasoning.tsx  shimmer.tsx  snippet.tsx  tool.tsx
src/components/ui/: breadcrumb.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  hover-card.tsx  menubar.tsx  progress.tsx  radio-group.tsx  select.tsx  sheet.tsx  slider.tsx  sonner.tsx  spinner.tsx  tooltip.tsx
src/lib/: agentCommand.ts  agentSessions.ts  dialog.ts  fonts.ts  launchDir.ts  panels.ts  platform.ts  shellQuote.test.ts  shellQuote.ts  usePresence.ts  useZoom.ts
src/modules/agents/: index.ts
src/modules/ai/: config.test.ts  config.ts  index.ts
src/modules/command-palette/: CommandPalette.tsx  commands.ts  index.ts  types.ts
src/modules/dnd/: DropIndicator.tsx  index.ts
src/modules/editor/: AiDiffPane.tsx  AiDiffStack.tsx  AiDiffStackLazy.tsx  EditorPane.tsx  EditorStack.tsx  EditorStackLazy.tsx  GitDiffPane.tsx  GitDiffStack.tsx  GitDiffStackLazy.tsx  NewEditorDialog.tsx  index.ts  useEditorFileSync.ts
src/modules/explorer/: ExplorerSearch.tsx  FileExplorer.tsx  InlineInput.tsx  TreeRow.tsx  index.ts
src/modules/git-history/: GitHistoryPane.tsx  GitHistoryStack.tsx  GitHistoryStackLazy.tsx  GraphRail.tsx  index.ts
src/modules/header/: Header.tsx  SearchInline.tsx  index.ts
src/modules/markdown/: MarkdownPreviewPane.tsx  MarkdownStack.tsx  MarkdownStackLazy.tsx  index.ts
src/modules/preview/: PreviewAddressBar.tsx  PreviewPane.test.ts  PreviewPane.tsx  PreviewStack.tsx  index.ts
src/modules/settings/: openSettingsWindow.ts  preferences.ts  store.ts
src/modules/shortcuts/: index.ts  shortcuts.ts
src/modules/sidebar/: SidebarRail.tsx  index.ts  types.ts  useSidebarPanel.ts
src/modules/source-control/: SourceControlPanel.tsx  SourceControlPanelLazy.tsx  index.ts  useSourceControl.ts  (+2 more)
src/settings/: SettingsApp.tsx  main.tsx
src/stores/: modalStore.ts  projectStore.ts  sessionMenuStore.ts  sessionStore.ts  settingsStore.ts  themeStore.ts  uiStore.ts
src/styles/: code-highlight.css  fonts.css  globals.css  terminalTheme.ts  tokens.ts
(+206 files in other folders)
