[workspace]
members = ["crates/*", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
uuid = { version = "1", features = ["v4"] }
