[package]
name = "xuya-terminal"
version.workspace = true
edition.workspace = true

[dependencies]
xuya-core = { path = "../crates/xuya-core" }
xuya-pty = { path = "../crates/xuya-pty" }
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
dashmap = "6"
log = "0.4"
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
