[package]
name = "xuya-terminal"
version.workspace = true
edition.workspace = true

[dependencies]
xuya-core = { path = "../crates/xuya-core" }
xuya-pty = { path = "../crates/xuya-pty" }
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
dashmap = "6"
log = "0.4"
tauri-plugin-dialog = "2"
windows-sys = { version = "0.61", features = ["Win32_System_DataExchange", "Win32_System_Ole"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
